Shared-Folder/Manifest-Files/Test-Deploy/nginx-global.yaml
---
# 1. NGINX Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-global-deploy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-global-deploy
  template:
    metadata:
      labels:
        app: nginx-global-deploy
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
# 2. NGINX Service
apiVersion: v1
kind: Service
metadata:
  name: nginx-global-svc
  namespace: default
spec:
  selector:
    app: nginx-global-deploy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
# 3. Ingress (access via ingress.sandab.me)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-global-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: ingress.sandab.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-global-svc
            port:
              number: 80
---
# 4. IngressRoute (access via ingressroute.sandab.me)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-global-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`ingressroute.sandab.me`)
    kind: Rule
    services:
    - name: nginx-global-svc
      port: 80
---
# 5. HTTPRoute (Gateway API, access via httproute.sandab.me)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-global-httproute
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "httproute.sandab.me"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx-global-svc
      port: 80
